tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_component_in_component_body.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_component_in_component_body.txt
---
error: Unknown component `inner_missing`
 --> tpl:2:3
  |
2 | {{ <inner_missing/> }}
  |    ^^^^^^^^^^^^^^^^
