tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_filter.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_filter.txt
---
error: Unknown filter `unknown_filter`
 --> tpl:1:11
  |
1 | {{ name | unknown_filter }}
  |           ^^^^^^^^^^^^^^

error: Unknown filter `another_unknown`
 --> tpl:2:11
  |
2 | {{ name | another_unknown }}
  |           ^^^^^^^^^^^^^^^
