tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_filter_in_component.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_filter_in_component.txt
---
error: Unknown filter `unknown_filter`
 --> tpl:2:11
  |
2 | {{ name | unknown_filter }}
  |           ^^^^^^^^^^^^^^
